--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-auth": "^5.0.0-beta.30",
+    "pdfjs-dist": "^5.4.449",
     "prisma": "^5.10.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
