--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
-    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "googleapis": "^169.0.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-auth": "^5.0.0-beta.30",
