--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.11",
     "pdfjs-dist": "^5.4.449",
     "prisma": "^5.10.2",
     "react": "19.2.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
